# Interprocess

./: .gitignore
interprocess_cpp/: CMakeLists.txt
interprocess_cpp/src/: main.cpp
interprocess_cpp/tests/: main1.cpp  main2.cpp
interprocess_ros_ws/src/interprocess_package/: CMakeLists.txt  package.xml
interprocess_ros_ws/src/interprocess_package/src/: main.cpp
